<package>
  <name>knowrob_semantic_map_to_owl</name>
  <version>1.0.0</version>
  <description>
     Node and tools to generate the OWL description of semantic maps
     from ROS messages.
  </description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mod_semantic_map</url>

  <author>Moritz Tenorth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosjava</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_semantic_map_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosjava</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_semantic_map_msgs</run_depend>

</package>
